@@ -1,0 +1,7 @@
+<?php
+
+require_once __DIR__ . '/modmonitorparser.class.php';
+
+class modMonitorFastFieldParser extends fastFieldParser{
+    use modMonitorParserTrait;
+}
