@@ -1,3 +1,8 @@
+modMonitor-2.4.1-beta
+================================
+- Added fastFieldParser support
+
+
 modMonitor-2.4.0-beta
 ================================
 - Added loging php errors
